+ At last, started implementing id_parent in messages for the future threaded view (whether as a plugin or in core). Currently works on Reply, Quote and new posts. Doesn't work on Quick Reply for now. (Post.php, Post2.php, Subs-Post.php, Post.template.php) ! Fixed and tweaked PM post layout -- straightened up the padding and margin, used on_timeformat() where it applies, made Delete button visible, etc. And my apologies for the minor hack in the PM layer's above(). (PersonalMessage.php, PersonalMessage.template.php, index.member.css)

--- a/Themes/default/skins/index.member.css
+++ b/Themes/default/skins/index.member.css
@@ -20,10 +20,10 @@ ul.quickbuttons
 ------------------------------------------------- */
 
 #personal_messages
+	.wrc extends #forumposts .wrc
 	.pm
 		overflow: auto
 		clear: both
-		padding: .9em 0
 	#author, #topic_title
 		float: left
 	#author
@@ -51,6 +51,9 @@ ul.quickbuttons
 			background: #f10909
 	.reportlinks
 		padding: .5em 1.3em
+
+#personal_drafts ul.quickbuttons
+	padding-right: 0
 
 #searchLabelsExpand li
 	padding: .3em .5em
